--- a/snake.html
+++ b/snake.html
@@ -1,1 +1,13 @@
-
+<html>
+	<head>
+		<style>
+		</style>
+		<script>
+		</script>
+	</head>
+	<body>
+    jjhopj
+		<script>
+		</script>
+	</body>
+</html>
