--- a/snake.html
+++ b/snake.html
@@ -1,12 +1,27 @@
 <html>
 	<head>
 		<style>
+			#puzzle {
+				display: inline-grid;
+			}
 		</style>
 		<script>
 		</script>
 	</head>
 	<body>
-    jjhopj
+		<div id=puzzle>
+			<input type=button value='Г'>
+			<input type=button value='Д'>
+			<input type=button value='Е'>
+			<input type=button value='Е'>
+		        <input type=button value='С'>
+			<input type=button value='Т'>
+			<input type=button value='Ж'>
+			<input type=button value='У'>
+			<input type=button value=''>
+			
+
+	        </div>
 		<script>
 		</script>
 	</body>
