--- a/snake.html
+++ b/snake.html
@@ -3,6 +3,9 @@
 		<style>
 			#puzzle {
 				display: inline-grid;
+				grid-template-columns: repeat(3, 1fr);
+				padding: 30vw;
+				padding-top: 10px;
 			}
 		</style>
 		<script>
