--- a/snake.html
+++ b/snake.html
@@ -6,6 +6,12 @@
 				grid-template-columns: repeat(3, 1fr);
 				padding: 30vw;
 				padding-top: 10px;
+			} input {
+				width: 10vw;
+				height: 10vw;
+				margin: 1px;
+				text-align: center;
+				font-size: 5vw;
 			}
 		</style>
 		<script>
