--- a/snake.html
+++ b/snake.html
@@ -1,6 +1,9 @@
 <html>
 	<head>
 		<style>
+			body {
+				background-color: antiquewhite;
+			}
 			#puzzle {
 				display: inline-grid;
 				grid-template-columns: repeat(3, 1fr);
