--- a/snake.html
+++ b/snake.html
@@ -2,7 +2,7 @@
 	<head>
 		<style>
 			body {
-				background-color: antiquewhite;
+				background-color: #d7e0fa;
 			}
 			#puzzle {
 				display: inline-grid;
