--- a/snake.html
+++ b/snake.html
@@ -28,11 +28,12 @@
 
 	        </div>
 		<script>
-			for (i=0; i < 9; i++)
+			for (i=0; i < 9; i++){
 				btn = document.createElement("input");
 				btn.type = "button";
 				btn.value = "Ж";
 				document.getElementById('puzzle').appendChild(btn);
+			}
 		</script>
 	</body>
 </html>
