--- a/snake.html
+++ b/snake.html
@@ -19,6 +19,8 @@
 			}
 		</style>
 		<script>
+			letter = ["Г", "Д", "Е", "Е", "С", "Т", "Ж", "У", " "];
+			btn = new Array(9);
 		</script>
 	</head>
 	<body>
@@ -29,9 +31,9 @@
 	        </div>
 		<script>
 			for (i=0; i < 9; i++){
-				btn = document.createElement("input");
-				btn.type = "button";
-				btn.value = "Ж";
+				btn[i] = document.createElement("input");
+				btn[i].type = "button";
+				btn[i].value = i;
 				document.getElementById('puzzle').appendChild(btn);
 			}
 		</script>
