--- a/snake.html
+++ b/snake.html
@@ -33,7 +33,7 @@
 			for (i=0; i < 9; i++){
 				btn[i] = document.createElement("input");
 				btn[i].type = "button";
-				btn[i].value = i;
+				btn[i].value = letter[i];
 				document.getElementById('puzzle').appendChild(btn);
 			}
 		</script>
