--- a/snake.html
+++ b/snake.html
@@ -21,6 +21,9 @@
 		<script>
 			letter = ["Г", "Д", "Е", "Е", "С", "Т", "Ж", "У", " "];
 			btn = new Array(9);
+			function play(B) {
+			    console.log(B)
+			}
 		</script>
 	</head>
 	<body>
