--- a/snake.html
+++ b/snake.html
@@ -34,7 +34,9 @@
 				btn[i] = document.createElement("input");
 				btn[i].type = "button";
 				btn[i].value = letter[i];
+				btn[i].onclick = function() {play(this)};
 				document.getElementById('puzzle').appendChild(btn[i]);
+				
 			}
 		</script>
 	</body>
