--- a/snake.html
+++ b/snake.html
@@ -23,6 +23,16 @@
 			btn = new Array(9);
 			function play(B) {
 			    console.log(B)
+				n = btn.indexOf(B);
+			   m = letter.indexOf(' ');
+			   if (true) {
+			        btn[n].value = " ";
+				btn[m].value = letter[n];
+				letter[m] = letter[n];
+				letter[n] = " ";
+			    
+			    
+			    }
 			}
 		</script>
 	</head>
