--- a/memory.html
+++ b/memory.html
@@ -17,9 +17,11 @@
 		</style>
 		<script>
 			letter = Array.from("012345678");
+			letter.sort(()=> Math.random()-0.5)
 			btn = new Array(9);
 			function play(B) {
-			console.log(B) 
+			n = indexOf(B)
+			console.log(n) 
 			}
 		</script>
 	</head>
