--- a/2048.html
+++ b/2048.html
@@ -3,7 +3,7 @@
 		<style>
     			#puzzle {
 				display: inline-grid;
-				grid-template-columns: repeat(3, 1fr);
+				grid-template-columns: repeat(4, 1fr);
 				padding: 30vw;
 				padding-top: 10px;
 			}
@@ -16,13 +16,24 @@
 			}
 		</style>
 		<script>
-			numberOfButtons = 9;
-			letter = Array.from("012345678");
-			letter.sort(()=>Math.random()-0.5)
+			numberOfButtons = 16;
+			playArea = Array.from("012345678");
+			for(i=0, i<numberOfButtons; i++){
+				playArea[i] = 0 
+			}
+			playArea[8] = 2;
+			playArea.sort(()=>Math.random()-0.5)
 			btn = new Array(numberOfButtons);
 			function play(B){
 				n = btn.indexOf(B);
 				console.log(n)
+				a = new Array(0)
+				for(i = 0, i < numberOfButtons; i++ ){
+					if(playArea[i] == 0){
+						a.concat([playArea[i]])
+					}
+				
+				}
 			}
 		</script>
 	</head>
@@ -33,7 +44,11 @@
 			for(i=0; i<numberOfButtons; i++){
 				btn[i] = document.createElement("input");
 				btn[i].type = "button";
-				btn[i].value = letter[i];
+				if(playArea[i] != 0){
+					btn[i].value = playArea[i]
+				}
+				btn[i].value = playArea[i] != 0 ?playArea[i] : " ":
+				btn[i].value = playArea[i];
 				btn[i].onclick = function() {play(this)};
 				document.getElementById('puzzle').appendChild(btn[i]);
 			}
