--- a/2048.html
+++ b/2048.html
@@ -17,7 +17,7 @@
 		</style>
 		<script>
 			numberOfButtons = 16;
-			playArea = Array.from("012345678");
+			playArea = new Array(numberOfButtons)
 			for(i=0, i<numberOfButtons; i++){
 				playArea[i] = 0 
 			}
