--- a/2048.html
+++ b/2048.html
@@ -18,7 +18,7 @@
 		<script>
 			numberOfButtons = 16;
 			playGround = new Array(numberOfButtons)
-			for(i=0, i<numberOfButtons; i++){
+			for(i=0; i<numberOfButtons; i++){
 				playGround[i] = 0 
 			}
 			playGround[0] = 2;
@@ -30,7 +30,7 @@
 				console.log(n)
 				
 				for(i = 0, i < numberOfButtons; i++ ){
-					if(playArea[i] == 0){
+					if(playGround[i] == 0){
 						a.concat([playGround[i]])
 					}
 				
@@ -48,8 +48,8 @@
 				if(playArea[i] != 0){
 					btn[i].value = playArea[i]
 				}
-				btn[i].value = playArea[i] != 0 ?playArea[i] : " ":
-				btn[i].value = playArea[i];
+				btn[i].value = playGround[i] != 0 ? playGround[i] : " ";
+				btn[i].value = playGround[i];
 				btn[i].onclick = function() {play(this)};
 				document.getElementById('puzzle').appendChild(btn[i]);
 			}
