--- a/2048.html
+++ b/2048.html
@@ -29,7 +29,7 @@
 				n = btn.indexOf(B);
 				console.log(n)
 				
-				for(i = 0, i < numberOfButtons; i++ ){
+				for(i = 0; i < numberOfButtons; i++ ){
 					if(playGround[i] == 0){
 						a.concat([playGround[i]])
 					}
