--- a/2048.html
+++ b/2048.html
@@ -28,6 +28,7 @@
 			function play(B){
 				n = btn.indexOf(B);
 				console.log(n)
+				a = new Array(0)
 				
 				for(i = 0; i < numberOfButtons; i++ ){
 					if(playGround[i] == 0){
