--- a/2048.html
+++ b/2048.html
@@ -46,7 +46,7 @@
 			for(i=0; i<numberOfButtons; i++){
 				btn[i] = document.createElement("input");
 				btn[i].type = "button";
-				if(playArea[i] != 0){
+				if(playGround[i] != 0){
 					btn[i].value = playArea[i]
 				}
 				btn[i].value = playGround[i] != 0 ? playGround[i] : " ";
