--- a/2048.html
+++ b/2048.html
@@ -47,7 +47,7 @@
 				btn[i] = document.createElement("input");
 				btn[i].type = "button";
 				if(playGround[i] != 0){
-					btn[i].value = playArea[i]
+					btn[i].value = playGround[i]
 				}
 				btn[i].value = playGround[i] != 0 ? playGround[i] : " ";
 				btn[i].value = playGround[i];
